--- a/mod_highlighter_gk5/admin/style.css
+++ b/mod_highlighter_gk5/admin/style.css
@@ -13,45 +13,42 @@ background: transparent;
 ::selection {
 	background: transparent;
 }
-
-#jform_params_about_us-lbl,
-#jform_params___field1-lbl,
-label[id^=jform_params_gk_line_] {
+#gk_about_us {
+	max-width: 750px;
+	margin: 0 auto;
+}
+#moduleOptions > .accordion-group:first-child > .collapse.in {
+	min-height: 300px;
+}
+#moduleOptions .accordion-group {
+	max-width: 1050px;
+	margin: 0 auto 2px;
+}
+#moduleOptions .minicolors-theme-bootstrap .minicolors-input {
+	font-family: Arial, Verdana, Serif;
+	width: 112px;
+}
+#jform_params_data_source_chzn {
 	display: none;
 }
-
-#jform_params_news_since_img {
-	margin-top: 8px;
+#jform_params_data_source {
+	display: block!important;
 }
-
-.highlightergk5-panel .switcher-on,
-.highlightergk5-panel .switcher-off {
-	width: 94px;
-	height: 27px;
-	background: transparent url('switcher.png') no-repeat 0 0;
-	cursor: pointer;
-	float: left;
-	margin-top: 3px;
+#moduleOptions .control-label {
+	max-width: 165px;
 }
-
-.highlightergk5-panel .switcher-off {
-	background-position: -94px 0;
+#moduleOptions .input-small,
+#jform_params_news_since {
+	width: 135px;
 }
-
-.highlightergk5-panel span.unit {
-	line-height: 34px;
-}
-
-/* lines */
-
-.highlightergk5-panel .gkFormLine {
+.gkFormLine {
 	clear: both;
 	display: block;
 	height: 21px;
 	margin: 0 -10px!important;
 }
 
-.highlightergk5-panel .gkFormLine.hasText {
+.gkFormLine.hasText {
 	background: transparent url('interface.png') no-repeat 5px -229px;
 	border-top: 10px solid #fff;
 	border-bottom: 5px solid #fff;
@@ -63,179 +60,21 @@ label[id^=jform_params_gk_line_] {
 	cursor: pointer;
 }
 
-.highlightergk5-panel .gkFormLine.hasText.open {
+.gkFormLine.hasText.open {
 	background-position: 5px -287px
 }
 
-.highlightergk5-panel .gkFormLine.hasText span {
+.gkFormLine.hasText span {
 	padding: 3px;
 	background: #fff;
-} /* togglers */
-
-.pane-sliders .highlightergk5-panel {
-	border: none !important;
-}
-
-.highlightergk5-panel > h3,
-.non-highlightergk5-panel > h3 {
-	height: 43px;
-	background: transparent;
-	background-image: linear-gradient(to bottom, #FFFFFF, #f9f9f9) !important;
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #d8d8d8;
-	border-style: solid;
-	border-width: 1px;
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-	-ms-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-	-o-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	-moz-text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	-webkit-text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	-ms-text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	-o-text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	cursor: pointer;
-	line-height: 43px;
-	margin-bottom: 5px !important;
-}
-
-.highlightergk5-panel > h3 a,
-.non-highlightergk5-panel > h3 a {
-	color: #333;
-	display: block;
-}
-
-.highlightergk5-panel > h3 a:hover,
-.highlightergk5-panel h3.pane-toggler-down a,
-.non-highlightergk5-panel > h3 a:hover,
-.non-highlightergk5-panel > h3.pane-toggler-down a {
-	color: #87901D
-}
-
-.pane-sliders .highlightergk5-panel .content {
-	margin: 4px auto;
-	width: 99%;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-}
-
-.highlightergk5-panel .gkHelpLink {
-	float: right !important;
-	width: 22px;
-	height: 22px;
-	cursor: pointer;
-	margin: 11px 12px 0 10px;
-	background: transparent url('interface.png') repeat-x 0 100%;
-}
-
-.highlightergk5-panel .gkHelpLink:hover {
-	background-position: 0 -48px;
-} /* form elements in the container */
-
-.highlightergk5-panel #jform_params_k2_tags {
-	height: 150px
-}
-
-.highlightergk5-panel fieldset.panelform > ul > li > label {
-	color: #444;
-	font-size: 11px;
-	font-weight: bold;
-	min-height: 24px;
-	line-height: 24px;
-	padding: 0 20px 0 10px;
-	text-align: right;
-	max-width: 30%!important;
-	min-width: 30%!important;
-}
-
-.highlightergk5-panel fieldset.panelform > ul > li fieldset {
-	line-height: 28px;
-}
-
-.highlightergk5-panel fieldset.panelform input[type=radio] {
-	margin-top: 11px;
-}
-
-.highlightergk5-panel fieldset.panelform input {
-	height: 16px;
-	color: #555;
-	line-height: 16px;
-	padding: 4px;
-	border-radius: 2px;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-}
-
-.highlightergk5-panel fieldset.panelform input.small {
-	width: 40px;
-}
-
-.highlightergk5-panel fieldset.panelform input.tright {
-	text-align: right;
-}
-
-.highlightergk5-panel fieldset.panelform input[type=button] {
-	height: 26px;
-	line-height: 26px;
-}
-
-.highlightergk5-panel fieldset.panelform select {
-	height: 26px;
-	color: #555;
-	line-height: 24px;
-	padding: 4px;
-	font-size: 11px;
-	border-radius: 2px;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-}
-
-.highlightergk5-panel fieldset.panelform select.position {
-	width: 80px!important;
-}
-
-.highlightergk5-panel fieldset.panelform textarea {
-	padding: 4px;
-	border-radius: 2px;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-}
-
-.highlightergk5-panel fieldset.panelform select[multiple=multiple] {
-	height: 150px;
-} /* lists */
-
-
-.fltrt .highlightergk5-panel ul.adminformlist li {
-	overflow: hidden;
-	border-bottom: 1px solid #eee;
-	padding: 1px 10px;
-	margin: 0;
-}
-
-.highlightergk5-panel fieldset.panelform .label {
-	font-size: 11px;
-	font-weight: bold;
-	width: auto;
-	padding: 0 5px;
-	line-height: 34px;
-}
-
-.highlightergk5-panel fieldset.panelform .desc {
-	font-size: 11px;
-	font-weight: normal;
-	width: auto;
-	padding: 10px;
-}
+} 
 
 /* Config manager */
 
-.highlightergk5-panel #jform_params_config_manager-lbl {
+#jform_params_config_manager-lbl {
 	display: none;
 }
-
-.highlightergk5-panel #config_manager_form {
+#config_manager_form {
 	clear: both;
 	color: #555;
 	margin: 16px 0;
@@ -243,178 +82,43 @@ label[id^=jform_params_gk_line_] {
 	padding: 10px 20px;
 	overflow: hidden;
 }
-
-.highlightergk5-panel #config_manager_form > div {
-	clear: both;
-	overflow: hidden;
-	padding: 2px 0;
-}
-
-.highlightergk5-panel #config_manager_form span {
-	float: left;
-	line-height: 36px;
-	margin-right: 10px;
-	margin-left: -3px;
-}
-
-.highlightergk5-panel #config_manager_form input[type="text"] {
+#config_manager_form input[type="text"] {
 	text-align: right;
 }
-
-.highlightergk5-panel #config_manager_form > div.gk_ok {
-	text-align: center;
-	font-weight: bold;
-	background: #5a5;
-	margin: 10px;
-	color: #fff;
-	padding: 8px 0;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-.highlightergk5-panel #config_manager_form > div.gk_error {
-	text-align: center;
-	font-weight: bold;
-	background: #a55;
-	margin: 10px;
-	color: #fff;
-	padding: 8px 0;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-.highlightergk5-panel #config_manager_form label {
+#config_manager_form label {
 	margin: 11px 0 0 0;
 } 
-
-/* GK5 - new rules */
-
-.highlightergk5-panel .gk-json-config,
-.highlightergk5-panel .gk-json-config-pm {
-	display: none;
+#config_manager_delete,
+#config_manager_load {
+	padding: 3px 12px 2px;
+	margin-top: -4px;
+}
+#config_manager_delete i,
+#config_manager_load i {
+	margin-right: 4px;
+}
+#config_manager_save_filename {
+	min-width: 175px;
+}
+#config_manager_form {
+	background:#f9f9f9;
+	clear:both;
+	color:#555;
+	margin:16px 0;
+	overflow:hidden;
+	padding:10px 20px;
+	position: absolute;
+	top: 0;
+	right: 20px;
+	max-width: 510px;
+}
+#config_manager_form label {
+	margin: 11px 0 0
+}
+#config_manager_form span {
+	font-size: 12px;
 }
 
-.highlightergk5-panel .input-percents,
-.highlightergk5-panel .input-pixels,
-.highlightergk5-panel .input-minutes,
-.highlightergk5-panel .input-ms,
-.highlightergk5-panel .input-times {
-	text-align: right;
-}
-
-
-.highlightergk5-panel .gkFormLine {
-	clear: both;
-	display: block;
-	height: 21px;
-	margin: 0 -10px!important
-}
-
-.highlightergk5-panel .gkFormLine.hasText {
-	background: transparent url(interface.png) no-repeat 5px -229px;
-	border-bottom: 5px solid #fff;
-	border-top: 10px solid #fff;
-	color: #444;
-	cursor: pointer;
-	font-size: 11px;
-	font-weight: 700;
-	line-height: 16px;
-	padding-left: 28px
-}
-
-.highlightergk5-panel .gkFormLine.hasText span {
-	background: #fff;
-	padding: 3px
-}
-
-.highlightergk5-panel .gkFormLine.hasText.open {
-	background-position: 5px -287px
-}
-
-.highlightergk5-panel .gkHelpLink {
-	background: transparent url(interface.png) repeat-x 0 -70px;
-	cursor: pointer;
-	float: right!important;
-	height: 22px;
-	margin: -31px 12px 0 0;
-	width: 22px
-}
-
-.highlightergk5-panel .gkHelpLink:hover {
-	background-position: 0 -48px
-}
-
-.pane-sliders .highlightergk5-panel,
-.pane-sliders .non-highlightergk5-panel {
-	border: none!important
-}
-.highlightergk5-panel #nsp-gk5-checkout h3 { 
-	background: #87901D; color: #fff; padding: 4px;
-}
-.highlightergk5-panel .pane-toggler span,
-.non-highlightergk5-panel > .pane-toggler span {
-	background: transparent url(interface.png) no-repeat 5px -126px!important
-}
-
-.highlightergk5-panel .pane-toggler-down span,
-.non-highlightergk5-panel > .pane-toggler-down span {
-	background: transparent url(interface.png) no-repeat 5px -176px!important
-}
-
-.highlightergk5-panel fieldset.panelform > ul > li > label {
-	color: #444;
-	font-size: 11px;
-	font-weight: 700;
-	line-height: 24px;
-	max-width: 30%!important;
-	min-height: 24px;
-	min-width: 32%!important;
-	padding: 0 20px 0 10px;
-	text-align: right
-}
-
-.highlightergk5-panel fieldset.panelform > ul > li fieldset {
-	line-height: 28px
-}
-
-.highlightergk5-panel h3.pane-toggler-down,
-.non-highlightergk5-panel > h3.pane-toggler-down {
-	border-bottom: 3px solid #87901D!important
-}
-
-.highlightergk5-panel fieldset.panelform input[type=button] {
-	height: 26px;
-	line-height: 26px
-}
-
-.highlightergk5-panel fieldset.panelform input[type=radio] {
-	margin-top: 11px
-}
-
-.highlightergk5-panel div.panel > h3 a:hover,
-.highlightergk5-panel div.panel h3.pane-toggler-down a {
-	color: #87901D
-}
-
-#gkDemoLink {
-	background: #fff;
-	border: 1px solid #ccc;
-	color: #000;
-	text-decoration: none;
-	padding: 3px 7px 4px;
-	margin: 0 0 0 5px;
-	line-height: 36px;
-	cursor: pointer;	
-	-webkit-border-radius: 8px;
-	-moz-border-radius: 8px;
-	border-radius: 8px;
-}
-#gkDemoLink:hover {
-	background: #E8F6FE;
-	border: 1px solid #aaa;
-}
 /* Social media */
 #gk-social {
 	margin-top: 10px;
@@ -431,4 +135,28 @@ label[id^=jform_params_gk_line_] {
 	line-height: 1.6;
 	margin-right: 20px;
 	vertical-align: top;	
+}
+#moduleOptions .input-small.input-pixels,
+#moduleOptions .input-small.input-ms {
+	width: 110px;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	border-radius: 0;
+}
+
+#moduleOptions .add-on {
+	margin-left: -1px;
+}
+
+@media (max-width: 1050px) { 
+	#config_manager_form,
+	#simple_crop {
+		position: relative;
+		top:  auto;
+		right: auto;
+		max-width: 100%;
+	}
+	#moduleOptions > .accordion-group > .collapse.in  {
+		min-height: auto;
+	}
 }
