--- a/mod_highlighter_gk5/interface/css/style.css
+++ b/mod_highlighter_gk5/interface/css/style.css
@@ -5,6 +5,9 @@ a:active, a:focus { outline:0; }
 /* Interface */
 
 .gkHighlighterInterface { float:left; padding: 0 7px }
+.gkHighlighterInterface[data-pos="right"] {
+	float: right;
+}
 .gkHighlighterInterface span.text { display:block; float:left; margin:0 6px 0 7px; font-size: 11px; font-weight: bold; text-transform: uppercase; line-height: 18px; }
 .gkHighlighterInterface div { float:left; width:auto; }
 .gkHighlighterInterface div a { display:block; float:left; height:13px; width:13px; margin: 2px 0 0 2px; background:transparent url('../images/interface.png') no-repeat 0 0; cursor:pointer; }
